--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -22,8 +22,8 @@ default.boolean.false=False
 default.date.format=yyyy-MM-dd HH:mm:ss z
 default.number.format=0
 
-default.created.message={0} {1} created
-default.updated.message={0} {1} updated
+default.created.message={0} created
+default.updated.message={0} updated
 default.deleted.message={0} {1} deleted
 default.not.deleted.message={0} {1} could not be deleted
 default.not.found.message={0} not found with id {1}
@@ -57,3 +57,5 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 defect.defectName.blank = Name cannot be blank
 defect.defectOverview.blank = Overview cannot be blank
 defect.stepsToReproduce.blank = Steps to reproduce cannot be blank
+
+user.login.unique = Invalid login name. {2} already used.
